--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,20 +1,33 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tech-Blog!</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
   </head>
   <body>
-  <section class="section">
-    <div class="container">
-      <h1 class="title">
-        Hello World
-      </h1>
-      <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
-      </p>
-    </div>
-  </section>
+    <nav class="navbar is-link">
+      <div class="navbar-brand">
+        <a href="/landing" class="navbar-item">Home</a>
+      </div>
+        <a href="/dashboard" class="navbar-item" style="color: white">DashBoard</a>
+      </div>
+        <a href="/login" class="navbar-item" style="color: white">Login</a>
+      </div>
+
+    </nav>
+    <section class="hero is-medium is-link">
+      <div class="hero-body">
+        <p class="title has-text-centered" style="font-size: 6rem">
+          The Tech-Blog!
+        </p>
+      </div>
+    </section>
+    <section class="section">
+      {{{body}}}
+    </section>
   </body>
 </html>
