--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar is-link">
       <div class="navbar-brand">
-        <a href="/landing" class="navbar-item">Home</a>
+        <a href="/" class="navbar-item">Home</a>
       </div>
         <a href="/dashboard" class="navbar-item" style="color: white">DashBoard</a>
       </div>
