--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,11 +3,11 @@
 {{!-- button to submit new post --}}
 
 <div>
-    <h1>Dashboard</h1>
-    <h2>My Posts</h2>
+    <h1 style="font-size: 3em;">Dashboard</h1>
+    <h2 style="font-size: 2em;">My Posts</h2>
     <div>
         {{#each posts}}
-            <div>
+            <div style="margin: 1em">
                 <h3>{{title}}</h3>
                 <p>{{content}}</p>
                 <button class="edit-post">Edit</button>
@@ -22,7 +22,8 @@
             <input type="text" name="post-title" id="post-title">
             <label for="post-content">Content</label>
             <textarea name="post-content" id="post-content" cols="30" rows="10"></textarea>
-            <button type="submit">Submit</button>
+            <button type="submit" id="new-post">Submit</button>
         </form>
     </div>
 </div>
+<script src="/js/post.js"></script>
