--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,8 +3,8 @@
     <h2 class="page-title" style="font-size: 3rem">Login</h2>
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login"></label>
-        <input class="input is-normal" type="text" placeholder="Email" id="email-login" style="width: 30em" />
+        <label for="username-login"></label>
+        <input class="input is-normal" type="text" placeholder="UserName" id="username-login" style="width: 30em" />
       </div>
       <div class="form-group">
         <label for="password-login"></label>
@@ -20,11 +20,7 @@
     <form class="form signup-form">
       <div class="form-group">
         <label for="name-signup"></label>
-        <input class="input is-normal" type="text" placeholder="Name" id="name-signup" style="width: 30em">
-      </div>
-      <div class="form-group">
-        <label for="email-signup"></label>
-        <input class="input is-normal" type="text" placeholder="Email" id="email-signup" style="width: 30em">
+        <input class="input is-normal" type="text" placeholder="UserName" id="name-signup" style="width: 30em">
       </div>
       <div class="form-group">
         <label for="password-signup"></label>
