--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,8 +35,8 @@
     <section class="section">
       {{{body}}}
     </section>
-    {{#if logged_in}}
-  <script src="/js/logout.js"></script>
+    {{#if loggedIn}}
+  <script src="./js/logout.js"></script>
   {{/if}}
   </body>
 </html>
