--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -5,7 +5,7 @@
             <div style="margin: 1em">
                 <h3>{{title}}</h3>
                 <p>{{content}}</p>
-                <p>Posted: {{created_at}}</p>
+                <p>Posted: {{format_date created_at}}</p>
             </div>
         {{/each}}
     </div>
